Adds center method.
And let the async issues begin.

--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -22,6 +22,9 @@
 <script src="../../out/jhere.js"></script>
 <script>
     var map = new jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
+    setTimeout(function(){
+        map.center({lat: 52.13, lng: 13.23});
+    }, 5000);
     // var other_map = new jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
 </script>
 </body>
