--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>HTML5 boilerplate—all you really need…</title>
     <style>
-        html, body { height: 100%;}
+        html, body { height: 100%; margin: 0; padding: 0;}
         .map {
             margin: 0;
             padding: 0;
@@ -22,7 +22,7 @@
 <script src="../../out/jhere.js"></script>
 <script>
     var map = new jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
-    map.center({lat: 52.13, lng: 13.23});
+    map.center({lat: 52.13, lng: 13.23}).zoom(10).type('terrain', 'base');
     // var other_map = new jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
 </script>
 </body>
