onclose support for info bubbles.

--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -23,7 +23,7 @@
 <script>
     var map = new jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
     map.zoom(10).type('terrain', 'base').marker({lat: 52.5, lng: 13.3}, {tap: function() {
-        console.log(this);
+        map.bubble(this.getPosition(), {content: 'foo', onclose: function(){console.log('closed');}});
     }});
     // var other_map = new jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
 </script>
