--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -24,7 +24,9 @@
     var map = new jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
     map.zoom(10).type('terrain', 'base').marker({lat: 52.5, lng: 13.3}, {tap: function() {
         map.bubble(this.getPosition(), {content: 'foo', onclose: function(){console.log('closed');}});
-    }});
+    }}).on('tap', function(e){
+        console.log(e);
+    });
     // var other_map = new jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
 </script>
 </body>
