--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
             <li><a href="">About Me</a></li>
             <li><a href="">Feedback</a></li>
         </ul> -->
-        <small>Massimiliano Marcon &copy; 2012-13</small>
+        <small id="notes">Supported by <a href="https://www.browserstack.com" title="BrowserStack - Live, Web-Based Browser Testing on all desktop and mobile browsers">BrowserStack</a> and <a href="https://www.digitalocean.com/" title="imple Cloud Hosting,
+Built for Developers.">DigitalOcean</a> - Massimiliano Marcon &copy; 2012-15</small>
     </footer>
 
     <!--
