New is no longer needed

--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -21,8 +21,9 @@
 
 <script src="../../out/jhere.js"></script>
 <script>
-    var map = new jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
-    map.zoom(10).type('terrain', 'base').marker({lat: 52.5, lng: 13.3}, {tap: function() {
+    /* globals jHERE: true */
+    var map = jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}})
+    .zoom(10).type('terrain', 'base').marker({lat: 52.5, lng: 13.3}, {tap: function() {
         map.bubble(this.getPosition(), {content: 'foo', onclose: function(){console.log('closed');}});
     }}).on('tap', function(e){
         console.log(e.geo);
