--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
 <div id="map" class="map"></div>
 <div id="other_map" class="map"></div>
 
-<script src="../../out/jhere.js"></script>
+<script src="../out/jhere.js"></script>
 <script>
     /* globals jHERE: true */
     var map = jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}})
