Changed use of loader and runner
Loader and Runner are now available globally within jHERE
and are used as singletons: this way it is possible to have
multiple jHERE instances taking advantage of the same loader
and runner, and this means we don't need to worry about loading
scripts and css files multiple times and about issues with the
loader callbacks.

--- a/examples/index.html
+++ b/examples/index.html
@@ -28,7 +28,7 @@
     }}).on('tap', function(e){
         console.log(e.geo);
     });
-    // var other_map = new jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}});
+    jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}}).zoom(15);
 </script>
 </body>
 </html>
