--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Maps made easy.</h2>
             <div class="get">
                 <a href="https://github.com/mmarcon/jhere/archive/master.zip" class="download"><span></span>Download jHERE</a>
-                <a href="https://github.com/mmarcon/jhere" class="fork"><span></span>Fork on Github</a>
+                <a href="http://beta.jhere.net" class="star"><span></span>Try jHERE 1.0 beta</a>
             </div>
         </div>
         <nav>
