Adds options to enable/disable map controls
(zoombar, scalebar, mapsettings)

--- a/examples/index.html
+++ b/examples/index.html
@@ -22,13 +22,13 @@
 <script src="../dist/jhere.min.js"></script>
 <script>
     /* globals jHERE: true */
-    var map = jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}})
+    var map = jHERE(document.querySelector('#map'), {zoom: 14, center: {lat: 52.5, lng: 18.3}})
     .zoom(10).type('terrain', 'base').marker({lat: 52.5, lng: 13.3}, {tap: function() {
         map.bubble(this.getPosition(), {content: 'foo', onclose: function(){console.log('closed');}});
     }}).on('tap', function(e){
         console.log(e.geo);
     });
-    jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}}).zoom(15);
+    jHERE(document.querySelector('#other_map'), {zoom: 14, center: {lat: 52.5, lng: 13.3}, enable: ['zoombar']}).zoom(15);
 </script>
 </body>
 </html>
