--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </li>
                 <li class="marker" title="Map with a custom marker. Clicking on the marker fires an event.">
                     <span>Marker</span>
-                    <a class="playground" href="http://bin.jhere.net/4066852" target="_blank"></a>
+                    <a class="playground" href="http://bin.jhere.net/a660811c459bcdbd926f" target="_blank"></a>
                 </li>
                 <li class="bubble" title="Map with a non-closable info bubble">
                     <span>Bubble</span>
